# office-management-system-backend

./: .env.example  .gitignore  20intake.xlsx  AGENTS.md  Dockerfile  INSTRUCTIONS.md  README.md  data.xlsx  db.db  genetic.py  intake20.json  output.json  pyproject.toml  rbac_permissions.py  requirements.txt  teacher_implementation.md  util.py  util1.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  decorators.py  hashers.py  models.py  models.test.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
core/api/admission/: serializers.py  urls.py  views.py
core/api/exam/: serializers.py  urls.py  views.py
core/api/finance/: serializers.py  urls.py  views.py
core/management/commands/: fast_password.py  seed_data copy.py  seed_data.py  seed_data1.py
core/migrations/: 0001_initial.py  0002_alter_semester_options_alter_exampaper_question_file_and_more.py  0002_teacher_intakesubjectfrequency_classschedule_and_more.py  0003_examresultsharelink_expires_at.py  __init__.py
utils/: rbac_setup.py
